--- a/src/Css/About.css
+++ b/src/Css/About.css
@@ -7,12 +7,12 @@
     margin: 0 auto;
   }
   
-  header {
+  .header {
     text-align: center;
     margin-bottom: 20px;
   }
   
-  header h1 {
+  .header h1 {
     font-size: 2.5rem;
     color: #333;
   }
