--- a/src/Css/AdminDashboard.css
+++ b/src/Css/AdminDashboard.css
@@ -3,13 +3,13 @@
 .admin-dashboard {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #f4f4f4;
+    background-color: #a2faf6;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
   
-  header {
+  .header {
     background-color: #007bff;
     color: white;
     padding: 10px 20px;
@@ -38,7 +38,7 @@
   }
   
   th {
-    background-color: #007bff;
+    background-color: #092b4e;
     color: white;
   }
   
@@ -47,7 +47,7 @@
   }
   
   button {
-    background-color: #28a745;
+    background-color: #160a5a;
     color: white;
     border: none;
     padding: 8px 12px;
