--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -6,7 +6,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
+    background-color: #a6f1f1;
   }
   
   h2 {
