--- a/src/Css/OrganizerDashboard.css
+++ b/src/Css/OrganizerDashboard.css
@@ -37,7 +37,7 @@ body {
   
   button {
     padding: 10px;
-    background-color: #28a745;
+    background-color: #082253;
     color: white;
     border: none;
     border-radius: 4px;
@@ -45,7 +45,7 @@ body {
   }
   
   button:hover {
-    background-color: #218838;
+    background-color: #2bc7ee;
   }
   
   .error {
