--- a/src/Css/Register.css
+++ b/src/Css/Register.css
@@ -5,7 +5,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #a6f1f1;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -25,7 +25,7 @@
   button {
     width: 100%;
     padding: 10px;
-    background-color: #28a745;
+    background-color: #0b065e;
     color: white;
     border: none;
     border-radius: 4px;
@@ -33,7 +33,7 @@
   }
   
   button:hover {
-    background-color: #218838;
+    background-color: #31b5e9;
   }
   
   .role-selection {
